--- a/privacy-ja.html
+++ b/privacy-ja.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>プライバシーポリシー | Fussion Kaleido</title>
+  <title>プライバシーポリシー | fussion Kaleidoscope</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
   <h1>プライバシーポリシー</h1>
-  <p>Fussion Kaleido（以下「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報を適切に保護することを重要な責務と考えています。</p>
+  <p>fussion Kaleidoscope（以下「本アプリ」）は、ユーザーのプライバシーを尊重し、個人情報を適切に保護することを重要な責務と考えています。</p>
 
   <h2>1. 収集する情報</h2>
   <p>本アプリは以下の情報を取得します。</p>
@@ -32,6 +32,6 @@
 
   <h2>5. お問い合わせ</h2>
   <p>プライバシーに関するお問い合わせは以下へお願いいたします。</p>
-  <p>Email: <a href="mailto:example@example.com">example@example.com</a></p>
+  <p>Email: <a href="mailto:fussion@eversystem.co.jp">fussion@eversystem.co.jp</a></p>
 </body>
 </html>
